--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "nprogress": "^0.2.0",
+    "store": "^2.0.12",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
