--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "store": "^2.0.12",
     "vue": "^2.6.11",
