--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@views/*": ["./src/views/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@comps/*": ["./src/components/*"],
-      "@store/*": ["./src/store/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@api/*": ["./src/api/*"]
+      "@views/*": ["src/views/*"],
+      "@assets/*": ["src/assets/*"],
+      "@comps/*": ["src/components/*"],
+      "@store/*": ["src/store/*"],
+      "@utils/*": ["src/utils/*"],
+      "@api/*": ["src/api/*"]
     }
   },
   "exclude": ["node_modules"]
