--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "store": "^2.0.12",
+    "swiper": "^6.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
