--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "store": "^2.0.12",
     "swiper": "^6.3.5",
     "uuid": "^8.3.1",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
