--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.4.5",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.4.4",
     "store": "^2.0.12",
     "swiper": "^6.3.5",
     "uuid": "^8.3.1",
